manifests/ingress-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agentsmith-lite-dev
  namespace: agentsmith
spec:
  ingressClassName: nginx
  rules:
    - host: agentsmith.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agentsmith-lite-web
                port:
                  number: 3000
